deployment/kubernetes/deployment-auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: grad-project
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: mehmetali10/auth-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: grad-project
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
