deployment/kubernetes/deployment-interaction.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-service
  namespace: grad-project
spec:
  selector:
    matchLabels:
      app: interaction
  replicas: 1
  template:
    metadata:
      labels:
        app: interaction
    spec:
      containers:
        - name: interaction
          image: mehmetali10/interaction-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: interaction-service
  namespace: grad-project
spec:
  selector:
    app: interaction
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
