deployment/kubernetes/deployment-profile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
  namespace: grad-project
spec:
  selector:
    matchLabels:
      app: profile
  replicas: 1
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: mehmetali10/profile-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: grad-project
spec:
  selector:
    app: profile
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
