deployment/kubernetes/mono-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: graduation-project
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: graduation-project
spec:
  ports:
    - port: 5432
  selector:
    app: postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: graduation-project
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: graduation-project
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: mehmetali10/auth-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: graduation-project
spec:
  externalIPs:
    - 192.168.49.2
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
  namespace: graduation-project
spec:
  selector:
    matchLabels:
      app: profile
  replicas: 1
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: mehmetali10/profile-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: graduation-project
spec:
  externalIPs:
    - 192.168.49.2
  selector:
    app: profile
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-service
  namespace: graduation-project
spec:
  selector:
    matchLabels:
      app: interaction
  replicas: 1
  template:
    metadata:
      labels:
        app: interaction
    spec:
      containers:
        - name: interaction
          image: mehmetali10/interaction-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: interaction-service
  namespace: graduation-project
spec:
  externalIPs:
    - 192.168.49.2
  selector:
    app: interaction
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-service
  namespace: graduation-project
spec:
  selector:
    matchLabels:
      app: trip
  replicas: 1
  template:
    metadata:
      labels:
        app: trip
    spec:
      containers:
        - name: trip
          image: mehmetali10/trip-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: trip-service
  namespace: graduation-project
spec:
  externalIPs:
    - 192.168.49.2
  selector:
    app: trip
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-service
  namespace: graduation-project
spec:
  selector:
    matchLabels:
      app: feed
  replicas: 1
  template:
    metadata:
      labels:
        app: feed
    spec:
      containers:
        - name: feed
          image: mehmetali10/feed-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: feed-service
  namespace: graduation-project
spec:
  externalIPs:
    - 192.168.49.2
  selector:
    app: feed
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilly-ai
  namespace: graduation-project
spec:
  selector:
    matchLabels:
      app: trilly-ai
  replicas: 1
  template:
    metadata:
      labels:
        app: trilly-ai
    spec:
      containers:
        - name: trilly-ai
          image: mehmetali10/trilly-ai
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: trilly-ai-service
  namespace: graduation-project
spec:
  selector:
    app: trilly-ai
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
